--- a/UI/Themes/Wee.Theme.Remark/Views/Shared/Themes/Remark/_Layout.cshtml
+++ b/UI/Themes/Wee.Theme.Remark/Views/Shared/Themes/Remark/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/wwwroot/themes/remark/classic/global/vendor/slidepanel/slidePanel.css">
     <link rel="stylesheet" href="/wwwroot/themes/remark/classic/global/vendor/flagiconcss/flag-icon.css">
 
+    <link rel="stylesheet" href="/wwwroot/themes/remark/classic/global/fonts/fontawesome/font-awesome.css">
     <link rel="stylesheet" href="/wwwroot/themes/remark/classic/global/fonts/webicons/web-icons.css">
     <link rel="stylesheet" href="/wwwroot/themes/remark/classic/global/fonts/brandicons/brandicons.css">
 
