--- a/Customers/ACME/Site.Acme/Views/Account/Login.cshtml
+++ b/Customers/ACME/Site.Acme/Views/Account/Login.cshtml
@@ -1,6 +1,9 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@using Site.Acme.Models.AccountViewModels
+@using Site.Acme.Models
+@using Microsoft.AspNetCore.Identity
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
