--- a/Customers/ACME/Site.Acme/Views/Account/Register.cshtml
+++ b/Customers/ACME/Site.Acme/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model RegisterViewModel
+﻿@using Site.Acme.Models.AccountViewModels
+@model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
