--- a/UI/Themes/Wee.Theme.Remark/Views/Shared/Themes/Remark/_MenuItem.cshtml
+++ b/UI/Themes/Wee.Theme.Remark/Views/Shared/Themes/Remark/_MenuItem.cshtml
@@ -9,6 +9,7 @@
         @if (hasChildren)
         {
             <a href="javascript:void(0)">
+                <i class="site-menu-icon @subMenu.ParentIcon" aria-hidden="true"></i>
                 <span class="site-menu-title">
                     @subMenu.Title
                 </span>
@@ -21,12 +22,12 @@
                     <li class="site-menu-item">
                         @{await Html.RenderPartialAsync("Themes/Remark/_MenuItemLink", item);}
                     </li>
-                            }
+                }
             </ul>
-                            }
-                            else
-                            {
-                                await Html.RenderPartialAsync("Themes/Remark/_MenuItemLink", subMenu);
-                            }
+        }
+        else
+        {
+            await Html.RenderPartialAsync("Themes/Remark/_MenuItemLink", subMenu);
+        }
     </li>
-                            }
+}
