--- a/UI/Themes/Wee.Theme.Remark/wwwroot/themes/remark/classic/global/fonts/fontawesome/font-awesome.css
+++ b/UI/Themes/Wee.Theme.Remark/wwwroot/themes/remark/classic/global/fonts/fontawesome/font-awesome.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+﻿@charset 'UTF-8';
 /*!
  *  Font Awesome 4.2.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -33,8 +33,8 @@
     font-weight: normal;
     font-style: normal; 
 
-    src: url('./fontawesome-webfont.eot?v=4.5.0');
-    src: url('./fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('./fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('./fontawesome-webfont.woff?v=4.5.0') format('woff'), url('./fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('./fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
+    src: url('/wwwroot/themes/remark/classic/global/fonts/fontawesome/fontawesome-webfont.eot?v=4.5.0');
+    src: url('/wwwroot/themes/remark/classic/global/fonts/fontawesome/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('/wwwroot/themes/remark/classic/global/fonts/fontawesome/fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('/wwwroot/themes/remark/classic/global/fonts/fontawesome/fontawesome-webfont.woff?v=4.5.0') format('woff'), url('/wwwroot/themes/remark/classic/global/fonts/fontawesome/fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('./fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
 }
 
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
